Only allow strings for image tag values
The following changes are made to the schema restrictions for image
tags in the Conjur Helm chart:

- Numeric values are no longer allowed for image tags.
  In other words, image tag values must now be surrounded in quotes.
  This restriction is being added to avoid the pitfall of allowing
  someone to enter a tag in the form of a [major-number].[minor-number]
  numeric value, where the minor number is a factor of 10. In this case
  the minor number gets interpreted as a decimal fraction, leading to
  trailing zeros to get truncated.
- Arbitrary strings are now allowed for image tags. For example,
  the image tag can be set to something like "latest".

This change does not effect the default values that are defined for
the various tag values.

--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -64,7 +64,7 @@ deployment:
 image:
   pullPolicy: Always
   repository: cyberark/conjur  # https://hub.docker.com/r/cyberark/conjur/
-  tag: 1.5
+  tag: '1.5'
 
 nginx:
   image:
