--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -13,6 +13,7 @@ metadata:
 {{ toYaml . | indent 4 }}
 {{- end }}
 {{- with .Values.deployment.annotations }}
+  annotations:
 {{ toYaml . | indent 4 }}
 {{- end }}
 spec:
@@ -40,6 +41,7 @@ spec:
           secretName: {{ .Release.Name }}-conjur-ssl-ca-cert
           # Permission == 0400. JSON spec doesn't support octal notation.
           defaultMode: 256
+      {{- if not .Values.openshift.enabled }}
       - name: {{ .Release.Name }}-conjur-configmap-volume
         configMap:
           name: {{ .Release.Name }}-conjur-nginx-configmap
@@ -52,10 +54,14 @@ spec:
               path: dhparams.pem
             - key: conjur_site
               path: sites-enabled/conjur.conf
-
+      {{- end }}
       containers:
       - name: {{ .Release.Name }}-nginx
-        image: "{{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}"
+        {{- if not .Values.openshift.enabled }}
+        image: "{{ .Values.nginx.image.kubernetes.repository }}:{{ .Values.nginx.image.kubernetes.tag }}"
+        {{- else }}
+        image: "{{ .Values.nginx.image.openshift.repository }}:{{ .Values.nginx.image.openshift.tag }}"
+        {{- end }}
         imagePullPolicy: {{ .Values.nginx.image.pullPolicy }}
         ports:
         - containerPort: 9443
@@ -89,12 +95,18 @@ spec:
         - name: {{ .Release.Name }}-conjur-ssl-ca-cert-volume
           mountPath: /opt/conjur/etc/ssl/ca
           readOnly: true
+        {{- if not .Values.openshift.enabled }}
         - name: {{ .Release.Name }}-conjur-configmap-volume
           mountPath: /etc/nginx
           readOnly: true
+        {{- end }}
 
       - name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        {{- if not .Values.openshift.enabled }}
+        image: "{{ .Values.image.kubernetes.repository }}:{{ .Values.image.kubernetes.tag }}"
+        {{- else }}
+        image: "{{ .Values.image.openshift.repository }}:{{ .Values.image.openshift.tag }}"
+        {{- end }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
 {{- if .Values.account.create }}
 {{- if .Release.IsUpgrade }}
@@ -110,12 +122,12 @@ spec:
 {{- end }}
         ports:
           - name: http
-            containerPort: 80
+            containerPort: 8080
             protocol: TCP
         livenessProbe:
           httpGet:
             path: /
-            port: 80
+            port: http
           initialDelaySeconds: 1
           periodSeconds: 5
           timeoutSeconds: 2
@@ -131,6 +143,8 @@ spec:
           # 1 seconds * 180 = 3 minutes
           failureThreshold: 180
         env:
+        - name: PORT
+          value: "8080"
         - name: CONJUR_AUTHENTICATORS
           valueFrom:
             secretKeyRef:
