--- a/conjur-oss/templates/nginx-configmap.yaml
+++ b/conjur-oss/templates/nginx-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.openshift.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -12,3 +13,4 @@ data:
   mime_types: {{ tpl (.Files.Get "files/mime.types") . | quote }}
   conjur_site: {{ tpl (.Files.Get "files/conjur.conf") . | quote }}
   dhparams: {{ tpl (.Files.Get "files/dhparams.pem") . | quote }}
+{{- end -}}
