--- a/conjur-oss/templates/tests/test-simple-install.yaml
+++ b/conjur-oss/templates/tests/test-simple-install.yaml
@@ -29,7 +29,11 @@ spec:
       name: tools
   containers:
   - name: {{ .Release.Name }}-test
-    image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+    {{- if not .Values.openshift.enabled }}
+    image: "{{ .Values.image.kubernetes.repository }}:{{ .Values.image.kubernetes.tag }}"
+    {{- else }}
+    image: "{{ .Values.image.openshift.repository }}:{{ .Values.openshift.kubernetes.tag }}"
+    {{- end }}
     workingDir: "/tools/bats"
     command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
     env:
