Removes OCP specific image repository and tag values
This change eliminates the OpenShift specific image repository and tag
values from the chart. This is being done to revert breaking changes
in chart values that added separate image repository/tag values
for Kubernetes vs OpenShift platforms. This change combines the
various Kubernetes / Openshift values into common values:

- Conjur repository
- Conjur tag
- Postgres repository
- Postgres tag
- Nginx repository
- Nginx tag

The defaults for these values will be the Kubernetes platform default
values. For deploying on OpenShift, the user will need to explicitly
set these to values that are appropriate for OpenShift.

The default values to use for OpenShift are documented in the chart's
README.md and in the `values.yaml` file.

--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -57,11 +57,7 @@ spec:
       {{- end }}
       containers:
       - name: {{ .Release.Name }}-nginx
-        {{- if not .Values.openshift.enabled }}
-        image: "{{ .Values.nginx.image.kubernetes.repository }}:{{ .Values.nginx.image.kubernetes.tag }}"
-        {{- else }}
-        image: "{{ .Values.nginx.image.openshift.repository }}:{{ .Values.nginx.image.openshift.tag }}"
-        {{- end }}
+        image: "{{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}"
         imagePullPolicy: {{ .Values.nginx.image.pullPolicy }}
         ports:
         - containerPort: 9443
@@ -102,11 +98,7 @@ spec:
         {{- end }}
 
       - name: {{ .Chart.Name }}
-        {{- if not .Values.openshift.enabled }}
-        image: "{{ .Values.image.kubernetes.repository }}:{{ .Values.image.kubernetes.tag }}"
-        {{- else }}
-        image: "{{ .Values.image.openshift.repository }}:{{ .Values.image.openshift.tag }}"
-        {{- end }}
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
 {{- if .Values.account.create }}
         # If the configured account has already been created, then start the
