--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -62,22 +62,24 @@ deployment:
   annotations: {}
 
 image:
-  kubernetes:
-    repository: cyberark/conjur  # https://hub.docker.com/r/cyberark/conjur/
-    tag: '1.11.1'
-  openshift:
-    repository: registry.connect.redhat.com/cyberark/conjur
-    tag: latest
+  # NOTE: For OpenShift deployments, the default values to use for the
+  # Conjur image are as follows:
+  #
+  # repository: registry.connect.redhat.com/cyberark/conjur
+  # tag: latest
+  repository: cyberark/conjur  # https://hub.docker.com/r/cyberark/conjur/
+  tag: '1.11.1'
   pullPolicy: Always
 
 nginx:
   image:
-    kubernetes:
-      repository: nginx          # https://hub.docker.com/_/nginx/
-      tag: '1.15'
-    openshift:
-      repository: registry.connect.redhat.com/cyberark/conjur-nginx
-      tag: latest
+    # NOTE: For OpenShift deployments, the default values to use for the
+    # NGINX image are as follows:
+    #
+    # repository: registry.connect.redhat.com/cyberark/conjur-nginx
+    # tag: latest
+    repository: nginx          # https://hub.docker.com/_/nginx/
+    tag: '1.15'
     pullPolicy: Always
       
 # nodeSelector (node selection constraints) to apply to the Conjur pod. Refer to:
@@ -86,12 +88,13 @@ nodeSelector: {}
 
 postgres:
   image:
-    kubernetes:
-      repository: postgres       # https://hub.docker.com/_/postgres/
-      tag: '10.14'
-    openshift:
-      repository: registry.redhat.io/rhscl/postgresql-10-rhel7      # https://catalog.redhat.com/software/containers/rhscl/postgresql-10-rhel7/5aa63541ac3db95f196086f1?container-tabs=overview
-      tag: latest
+    # NOTE: For OpenShift deployments, the default values to use for the
+    # postgres image are as follows:
+    #
+    # repository: registry.redhat.io/rhscl/postgresql-10-rhel7
+    # tag: latest
+    repository: postgres       # https://hub.docker.com/_/postgres/
+    tag: '10.14'
     pullPolicy: Always
       
   persistentVolume:
