Run GitHub actions for pull requests and push to master
Currently, GitHub actions testing isn't performed for pull requests
from a community contributor. This adds a trigger to run the
GH actions tests for `pull_request` events, to that tests are run
for PRs from everyone in the community.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,17 @@
 name: CI
 
 on:
-  # Run this workflow on all push events
+  # Run this on pushes to master
   push:
+    branches:
+    - master
+
+  # Or when PR operations are done
+  pull_request:
+    types:
+    - opened
+    - reopened
+    - synchronize
 
 jobs:
   linter:
