Adds sample settings for validator IDs for KinD example
The conjurdemos/kubernetes-conjur-demo scripts PR #140 adds support for 2
"validator" host IDs in Conjur policy that can be used to validate Conjur
authentication e.g. after a Kubernetes cluster or a Kubernetes Namespace
has been configured to support Conjur authn-k8s.

This change adds sample settings for configuring these authenticator validator
host IDs for the Kubernetes-in-Docker (KinD) application deployment example.
The sample settings are commented out, and if left as is, then default values
will be used. Otherwise, if someone needs to customize the validator
ID/Namespace settings, they can add explicit settings to the `customize.env`
file.

--- a/examples/kubernetes-in-docker/customize.env
+++ b/examples/kubernetes-in-docker/customize.env
@@ -45,3 +45,19 @@
 # Configuration for Conjur authn-k8s
 #export ANNOTATION_BASED_AUTHN="<true-or-false-defaults-to-true>"
 #export AUTHENTICATOR_ID="<authenticator-id-string-defaults-to-my-authenticator-id>"
+
+# Conjur policy options
+#
+# The 'kubernetes-conjur-demo' scripts that are used in this KinD example
+# generate and load Conjur policy that includes two, authenticate-only (i.e.
+# no access to Conjur secrets) "validator" host IDs. These host IDs can be
+# used to validate basic authentication with Conjur after configuring a
+# Kubenetes cluster or application namespace for Conjur authn-k8s support.
+# The following settings will be exported to the 'kubernetes-conjur-demo'
+# scripts to allow customization of these host IDs and the Namespaces from
+# which authentication validation will be performed.
+#
+#export VALIDATOR_ID="<conjur-policy-host-id-for-cluster-authn-validation-defaults-to-validator>"
+#export VALIDATOR_NAMESPACE_NAME="<namespace-used-for-authn-validation-defaults-to-CONJUR_NAMESPACE>"
+#export APP_VALIDATOR_ID="<conjur-policy-host-id-for-app-namespace-authn-validation-defaults-to-app-validator>"
+#export APP_VALIDATOR_ID="<namespace-used-for-app-namespace-authn-validation-defaults-to-TEST_APP_NAMESPACE_NAME>"
