--- a/ci/secrets.yml
+++ b/ci/secrets.yml
@@ -1,7 +1,7 @@
-GCLOUD_CLUSTER_NAME: !var ci/google-container-engine-testbed/gcloud-cluster-name
-GCLOUD_PROJECT_NAME: !var ci/google-container-engine-testbed/gcloud-project-name
-GCLOUD_SERVICE_KEY: !var:file ci/google-container-engine-testbed/gcloud-service-key
-GCLOUD_ZONE: !var ci/google-container-engine-testbed/gcloud-zone
+GCLOUD_CLUSTER_NAME: !var ci/gke/rapid/cluster-name
+GCLOUD_PROJECT_NAME: !var ci/gke/project-name
+GCLOUD_SERVICE_KEY: !var:file ci/gke/service-key
+GCLOUD_ZONE: !var ci/gke/zone
 
 DOCKER_REGISTRY_URL: us.gcr.io
-DOCKER_REGISTRY_PATH: us.gcr.io/conjur-gke-dev
+DOCKER_REGISTRY_PATH: us.gcr.io/refreshing-mark-284016
