Fix broken builds on conjur-authn-k8s-client repo
Jenkins tests and Github Actions tests on the conjur-authn-k8s-client
repo are currently failing. Root cause is that the example scripts
in conjur-oss-helm-chart aren't setting a default value for
the `AUTHN_STRATEGY` environment variable.

--- a/examples/common/customize.env
+++ b/examples/common/customize.env
@@ -42,9 +42,7 @@
 #export TEST_APP_DATABASE="<postgres-or-mysql-defaults-to-postgres>"
 #export TEST_APP_NAMESPACE_NAME="<test-app-namespace-name-defaults-to-app-test>"
 
-# Configuration for Conjur authn-k8s
+# Configuration for Conjur authentication
 #export ANNOTATION_BASED_AUTHN="<true-or-false-defaults-to-true>"
+#export AUTHN_STRATEGY="<authn-jwt-or-authn-k8s-defaults-to-authn-k8s>"
 #export AUTHENTICATOR_ID="<authenticator-id-string-defaults-to-my-authenticator-id>"
-
-# Strategy of authentication. Can be authn-jwt or authn-k8s, defaults to authn-k8s
-#export AUTNH_STRATEGY="authn-k8s"
