--- a/conjur-oss/templates/secrets.yaml
+++ b/conjur-oss/templates/secrets.yaml
@@ -17,6 +17,7 @@ type: Opaque
 data:
   key: "{{ .Values.authenticators | b64enc }}"
 ---
+{{- if not .Values.dataKeySecretRef }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -37,6 +38,7 @@ metadata:
 type: Opaque
 data:
   key: {{ .Values.dataKey | b64enc }}
+{{- end }}
 ---
 {{- include "conjur-oss.database-password" . }}
 apiVersion: v1
