--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -7,7 +7,8 @@
 # rather than setting these in a custom values YAML file. This avoids the
 # risk of leaving around residual values files containing this sensitive
 # information.
-dataKeySecretRef: 
+dataKeySecretRef: "conjur-data-key"
+
 account:
   # Name of Conjur account to be created. Maps to CONJUR_ACCOUNT env variable
   # for the Conjur container.
