Make Postgres FIPS compliant
Set the postgres password encryption to scram-sha-256 to make Postgres FIPS compliant

--- a/conjur-oss/files/postgres-ssl.conf
+++ b/conjur-oss/files/postgres-ssl.conf
@@ -3,3 +3,5 @@ ssl_cert_file = '/opt/app-root/src/certificates/tls.crt'
 ssl_key_file = '/opt/app-root/src/certificates/tls.key'
 #ssl_ca_file = '/opt/app-root/src/certificates/ca.crt'
 #ssl_crl_file = '/opt/app-root/src/certificates/list.crl'
+	
+password_encryption = scram-sha-256
